manifests/Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: flask-app-rollout
  namespace: flask-app
  labels:
    app: flask-app
spec:
  replicas: 4
  strategy:
    canary:
      steps:
      - setWeight: 25    
      - pause: {duration: 30s}  
      - setWeight: 50    
      - pause: {duration: 30s}    
      - setWeight: 75    
      - pause: {duration: 30s}  
      
      trafficRouting:
        nginx:
          stableIngress: flask-app-ingress
          additionalIngressAnnotations:
            canary-by-header: "canary"
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: maisara99/jenkins-py:4645752
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
