manifests/CanaryService.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-canary-service
  namespace: flask-app
  labels:
    app: flask-app
spec:
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5000
